[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/patrol_zone_enemy.gd" type="Script" id=1]

[node name="PatrolZoneEnemy" type="Area2D"]
collision_layer = 0
collision_mask = 4
script = ExtResource( 1 )

[connection signal="body_entered" from="." to="." method="_on_PatrolZoneEnemy_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_PatrolZoneEnemy_body_exited"]
